--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-qrcode": "^2.1.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-qr-reader": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
