--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next-qrcode": "^2.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-qr-reader": "^2.2.1"
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
