--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
+    "next": "^12.1.2",
     "next-qrcode": "^2.1.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-qr-reader": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "tailwindcss": "^3.0.24",
