--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "17.0.38",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-qr-reader": "^2.1.4",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "tailwindcss": "^3.0.24",
